update func location + black isort

--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -63,6 +63,7 @@
     "import librosa.display\n",
     "\n",
     "import plotly.offline as py\n",
+    "\n",
     "py.init_notebook_mode(connected=True)\n",
     "import plotly.graph_objs as go\n",
     "import plotly.tools as tls\n",
@@ -106,8 +107,8 @@
    "outputs": [],
    "source": [
     "# download dataset\n",
-    "_ = SPEECHCOMMANDS(\"./data\", download=True, url='speech_commands_v0.02')\n",
-    "source_data_path = Path('data/SpeechCommands/speech_commands_v0.02')"
+    "_ = SPEECHCOMMANDS(\"./data\", download=True, url=\"speech_commands_v0.02\")\n",
+    "source_data_path = Path(\"data/SpeechCommands/speech_commands_v0.02\")"
    ]
   },
   {
@@ -142,7 +143,7 @@
     }
    ],
    "source": [
-    "audio_files = list(source_data_path.glob('**/*.wav'))\n",
+    "audio_files = list(source_data_path.glob(\"**/*.wav\"))\n",
     "audio_widgets = []\n",
     "for file in random.sample(audio_files, 10):\n",
     "    sample_rate, audio = wavfile.read(file)\n",
@@ -150,7 +151,7 @@
     "    with out:\n",
     "        display(Audio(data=audio, rate=sample_rate))\n",
     "    audio_widgets.append(out)\n",
-    "widgets.HBox(audio_widgets)\n"
+    "widgets.HBox(audio_widgets)"
    ]
   },
   {
@@ -199,15 +200,14 @@
     "for path in source_data_path.iterdir():\n",
     "    if path.is_dir():\n",
     "        labels.append(path.name)\n",
-    "        count = len(list(path.glob('*.wav')))\n",
+    "        count = len(list(path.glob(\"*.wav\")))\n",
     "        count_labels.append(count)\n",
-    " \n",
+    "\n",
     "# creating the bar plot\n",
-    "fig = plt.figure(figsize = (17, 5))\n",
-    "plt.bar(labels, count_labels, color ='maroon',\n",
-    "        width = 0.9)\n",
+    "fig = plt.figure(figsize=(17, 5))\n",
+    "plt.bar(labels, count_labels, color=\"maroon\", width=0.9)\n",
     "plt.xticks(rotation=90)\n",
-    "plt.rcParams.update({'font.size': 12})\n",
+    "plt.rcParams.update({\"font.size\": 12})\n",
     "plt.xlabel(\"Label count\")\n",
     "plt.ylabel(\"Number of recording\")\n",
     "plt.show()"
@@ -251,9 +251,9 @@
    "source": [
     "# dataset structure\n",
     "# waveform, sample_rate, label, speaker_id, utterance_number\n",
-    "train_ds = SPEECHCOMMANDS(\"./data\", subset=\"training\", url='speech_commands_v0.02')\n",
-    "test_ds = SPEECHCOMMANDS(\"./data\", subset=\"testing\", url='speech_commands_v0.02')\n",
-    "val_ds = SPEECHCOMMANDS(\"./data\", subset=\"validation\", url='speech_commands_v0.02')\n",
+    "train_ds = SPEECHCOMMANDS(\"./data\", subset=\"training\", url=\"speech_commands_v0.02\")\n",
+    "test_ds = SPEECHCOMMANDS(\"./data\", subset=\"testing\", url=\"speech_commands_v0.02\")\n",
+    "val_ds = SPEECHCOMMANDS(\"./data\", subset=\"validation\", url=\"speech_commands_v0.02\")\n",
     "print(\"train set: \", len(train_ds))\n",
     "print(\"test set: \", len(test_ds))\n",
     "print(\"val set: \", len(val_ds))"
@@ -339,7 +339,7 @@
     }
    ],
    "source": [
-    "file = 'data/SpeechCommands/speech_commands_v0.02/dog/0a2b400e_nohash_0.wav'\n",
+    "file = \"data/SpeechCommands/speech_commands_v0.02/dog/0a2b400e_nohash_0.wav\"\n",
     "plot_audio(file)"
    ]
   },
@@ -350,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = 'data/SpeechCommands/speech_commands_v0.02/bird/0a9f9af7_nohash_1.wav'\n",
+    "file = \"data/SpeechCommands/speech_commands_v0.02/bird/0a9f9af7_nohash_1.wav\"\n",
     "plot_audio(file)"
    ]
   },
@@ -381,7 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_fft('data/SpeechCommands/speech_commands_v0.02/dog/0a2b400e_nohash_0.wav')"
+    "plot_fft(\"data/SpeechCommands/speech_commands_v0.02/dog/0a2b400e_nohash_0.wav\")"
    ]
   },
   {
@@ -391,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_fft('data/SpeechCommands/speech_commands_v0.02/bird/0a9f9af7_nohash_1.wav')"
+    "plot_fft(\"data/SpeechCommands/speech_commands_v0.02/bird/0a9f9af7_nohash_1.wav\")"
    ]
   },
   {
@@ -412,8 +412,12 @@
    "source": [
     "new_sample_rate = 8000\n",
     "\n",
-    "sample_rate, samples = wavfile.read('data/SpeechCommands/speech_commands_v0.01/cat/0ab3b47d_nohash_1.wav')\n",
-    "resampled = signal.resample(samples, int(new_sample_rate/sample_rate * samples.shape[0]))\n"
+    "sample_rate, samples = wavfile.read(\n",
+    "    \"data/SpeechCommands/speech_commands_v0.01/cat/0ab3b47d_nohash_1.wav\"\n",
+    ")\n",
+    "resampled = signal.resample(\n",
+    "    samples, int(new_sample_rate / sample_rate * samples.shape[0])\n",
+    ")"
    ]
   },
   {
